--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "apps/AlexaSkill"]
 	path = apps/AlexaSkill
-	url = git://github.com:benptc/AlexaSkill.git
+	url = https://github.com/benptc/AlexaSkill.git
